# FullStak-Hypermedia-Monolith

./: .env  Procfile  README.md  db  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: database.py  main.py  routes.py
static/templates/: base.html  cv_fragmento.html  cv_index.html  cv_proyectos_fragmento.html  cv_statico.html  documentos_fragmento.html  documentos_fragnento.html  index.html
tests/: BENCHMARK_REPORT.md  benchmark_cache.py  benchmark_script.py  run_dev.py  test_cache.py  test_integracion_cache.py
